--- a/src/app/sections/section-clientes/section-clientes.component.scss
+++ b/src/app/sections/section-clientes/section-clientes.component.scss
@@ -1,7 +1,6 @@
 @import "@variables";
 
 main {
-  border: 1px solid red;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -9,11 +8,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 2em;
-  background-color: $font-global;
 
-  //   .logo-slide {
-  //     white-space: nowrap;
-  //   }
   .logos {
     overflow: hidden;
     width: 100%;
@@ -22,9 +17,9 @@ main {
     white-space: nowrap;
     position: relative;
 
-    &:hover .logo-slide {
-      animation-play-state: paused;
-    }
+    // &:hover .logo-slide {
+    //   animation-play-state: paused;
+    // }
 
     &::before,
     &::after {
