--- a/src/app/components/title-sections/title-sections.component.scss
+++ b/src/app/components/title-sections/title-sections.component.scss
@@ -5,12 +5,13 @@
     color: $color-text;
     font-size: 4rem;
     width: 100%;
+    padding: 1em 0;
     @media screen and (max-width: 1000px) {
       font-size: 3em;
     }
 
     @media screen and (max-width: 600px) {
-      font-size: 1.9em;
+      font-size: 2.5em;
       text-align: center;
     }
   }
