--- a/src/app/sections/section-clientes/section-clientes.component.scss
+++ b/src/app/sections/section-clientes/section-clientes.component.scss
@@ -2,18 +2,21 @@
 
 main {
   width: 100%;
-  height: 100vh;
+  height: 47rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 2em;
+  position: relative;
+  @media screen and (max-width: 1550px) {
+    justify-content: center;
+  }
 
   .logos {
     overflow: hidden;
     width: 100%;
     padding: 60px 0;
-    background-color: #fff;
     white-space: nowrap;
     position: relative;
 
@@ -47,6 +50,9 @@ main {
       img {
         height: 120px;
         margin: 0 40px;
+        @media screen and (max-width: 600px) {
+          height: 110px;
+        }
       }
     }
   }
@@ -58,5 +64,13 @@ main {
     to {
       transform: translateX(-100%);
     }
+  }
+
+  .divSvg {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
