--- a/src/app/components/title-sections/title-sections.component.scss
+++ b/src/app/components/title-sections/title-sections.component.scss
@@ -6,6 +6,10 @@
     font-size: 4rem;
     width: 100%;
     padding: 1em 0;
+    @media screen and (max-width: 1400px) {
+      font-size: 3.5em;
+    }
+
     @media screen and (max-width: 1000px) {
       font-size: 3em;
     }
