--- a/src/app/sections/section-servicos/section-servicos.component.scss
+++ b/src/app/sections/section-servicos/section-servicos.component.scss
@@ -7,7 +7,10 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2em;
+  gap: 1.8em;
+  @media screen and (max-width: 1400px) {
+    gap: 0;
+  }
 
   .cardContainer {
     overflow: hidden;
@@ -16,8 +19,20 @@ main {
     align-items: center;
     gap: 1em;
     width: 100%;
-    height: 500px;
+    height: 600px;
     padding: 60px 20px;
+    border: 1px solid;
+
+    @media screen and (max-width: 1200px) {
+      padding: 40px 20px;
+    }
+    @media screen and (max-width: 1000px) {
+      padding: 10px;
+      flex-wrap: wrap;
+    }
+    @media screen and (max-width: 670px) {
+      gap: 0.8em;
+    }
 
     .card {
       background-color: $background-card;
@@ -32,9 +47,31 @@ main {
       color: #fff;
       gap: 1.5em;
       transition: 0.3s ease-out;
+
       &:hover {
         cursor: pointer;
         transform: translateY(-10px);
+      }
+
+      @media screen and (max-width: 1450px) {
+        height: 330px;
+      }
+
+      @media screen and (max-width: 1200px) {
+        height: 280px;
+        width: 200px;
+        gap: 0.8em;
+      }
+
+      @media screen and (max-width: 1000px) {
+        height: 220px;
+        gap: 0.5em;
+      }
+
+      @media screen and (max-width: 670px) {
+        height: 180px;
+        width: 172px;
+        gap: 0.3em;
       }
 
       .cardIconTitle {
@@ -43,19 +80,59 @@ main {
         justify-content: center;
         align-items: center;
         gap: 0.8em;
+
+        @media screen and (max-width: 1200px) {
+          gap: 0.3em;
+        }
+        @media screen and (max-width: 670px) {
+          gap: 0;
+        }
         span {
           text-align: center;
           font-weight: normal;
           width: 100%;
           font-size: 6.8em;
+          gap: 1.8em;
+
+          @media screen and (max-width: 1400px) {
+            font-size: 6em;
+          }
+          @media screen and (max-width: 1200px) {
+            font-size: 4em;
+          }
+          @media screen and (max-width: 1000px) {
+            font-size: 3em;
+          }
+          @media screen and (max-width: 670px) {
+            font-size: 2.8em;
+          }
         }
         h2 {
           font-size: 2em;
+          text-align: center;
+          @media screen and (max-width: 1400px) {
+            font-size: 1.6em;
+          }
+          @media screen and (max-width: 1200px) {
+            font-size: 1.4em;
+          }
+          @media screen and (max-width: 1000px) {
+            font-size: 1.2em;
+          }
+          @media screen and (max-width: 670px) {
+            font-size: 1em;
+          }
         }
       }
 
       p {
         text-align: center;
+        @media screen and (max-width: 1200px) {
+          font-size: 0.9em;
+        }
+        @media screen and (max-width: 1000px) {
+          font-size: 0.8em;
+        }
       }
     }
   }
