SectionSobre adicionada no template e ajustes no sass na de serviços

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Sobre -->
+<app-section-sobre></app-section-sobre>
 <!-- Serviços -->
 <app-section-servicos></app-section-servicos>
 <!-- Clientes -->
