--- a/src/app/sections/section-servicos/section-servicos.component.scss
+++ b/src/app/sections/section-servicos/section-servicos.component.scss
@@ -22,6 +22,10 @@ main {
     height: 600px;
     padding: 60px 20px;
 
+    @media screen and (max-width: 1400px) {
+      padding: 60px 30px;
+    }
+
     @media screen and (max-width: 1200px) {
       padding: 40px 20px;
     }
