--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -2,67 +2,100 @@
 
 main {
   width: 100%;
-  height: 100vh;
+  height: 47rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 
-  border: 1px solid red;
+  .aboutTitle h1 {
+    position: absolute;
+    content: "";
+    top: 0.6em;
+    right: 2em;
+    font-size: 10em;
+    letter-spacing: 12px;
+    color: #f2f2f2;
+    z-index: -1;
+  }
 
-  .divContainerTitle {
-    height: 600px;
+  .aboutContainer {
+    height: 100%;
     width: 100%;
     display: flex;
-    justify-content: start;
-    align-items: start;
-    padding: 1em;
+    justify-content: center;
+    align-items: center;
+    padding: 4em 1em;
     flex-direction: row;
-    position: relative;
+    gap: 8em;
 
-    .divTitle {
-      margin-left: 25%;
-      background: linear-gradient(
-        207deg,
-        rgba(255, 255, 255, 1) 0%,
-        rgb(245, 245, 245) 100%
-      );
+    .aboutContainerText {
       display: flex;
       justify-content: center;
-      align-items: start;
       flex-direction: column;
-      gap: 1em;
-      width: 560px;
-      height: 500px;
-      border-radius: 10px;
-      padding: 1.2em 4em;
-      border: 2px solid #35353552;
+      gap: 1.6em;
+      width: 700px;
+      height: 440px;
+      padding: 1.2em 0em;
 
-      h1 {
-        font-size: 2.5em;
+      .aboutText {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        padding: 0em 1em;
+        h1 {
+          font-size: 3em;
+        }
+
+        p {
+          font-size: 1.2em;
+          font-weight: 400;
+          text-align: justify;
+        }
       }
 
-      p {
-        font-size: 17px;
-        font-weight: normal;
-        text-align: justify;
+      .aboutIconsContainer {
+        display: flex;
+        width: 100%;
+        height: 150px;
+        flex-wrap: wrap;
+        padding: 0em 1em;
+        gap: 1em 5em;
+
+        .aboutIconText {
+          display: flex;
+          justify-content: start;
+          align-items: center;
+          gap: 1em;
+          min-width: 260px;
+
+          .aboutIcon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid #e6e6e6;
+            padding: 8px;
+            border-radius: 50%;
+            span {
+              font-size: 1.7em;
+              font-weight: 400;
+            }
+          }
+        }
       }
     }
 
-    .divImgSobre {
-      position: absolute;
-      content: "";
-      bottom: 8em;
-      right: 20em;
-      z-index: 1;
-      width: 560px;
-      height: 420px;
-      border-radius: 10px;
-      overflow: hidden;
+    .aboutImgContainer {
+      position: relative;
+      .imgAbout {
+        border-radius: 5px;
+      }
 
-      img {
-        width: 100%;
-        height: 100%;
+      .svgAbout {
+        position: absolute;
+        left: 20px;
+        bottom: 20px;
       }
     }
   }
