--- a/src/app/sections/section-servicos/section-servicos.component.html
+++ b/src/app/sections/section-servicos/section-servicos.component.html
@@ -1,6 +1,34 @@
 <!-- Section Serviços -->
 <main>
   <app-title-sections title="Nossos Serviços"> </app-title-sections>
+  <!--?xml version="1.0" standalone="no"?-->
+  <!--?xml version="1.0" standalone="no"?-->
+  <svg
+    class="svgServices"
+    id="sw-js-blob-svg"
+    viewBox="0 0 100 100"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <defs>
+      <linearGradient id="sw-gradient" x1="0" x2="1" y1="1" y2="0">
+        <stop id="stop1" stop-color="rgba(242, 242, 242, 1)" offset="0%"></stop>
+        <stop
+          id="stop2"
+          stop-color="rgba(242, 242, 242, 1)"
+          offset="100%"
+        ></stop>
+      </linearGradient>
+    </defs>
+    <path
+      fill="url(#sw-gradient)"
+      d="M22.3,-37.2C29.2,-34.7,35.3,-29.3,39.1,-22.6C42.8,-16,44.1,-8,42.5,-0.9C40.9,6.1,36.4,12.3,31.2,16.4C26,20.4,20.1,22.5,14.7,26.2C9.4,29.9,4.7,35.4,-0.4,36.1C-5.6,36.9,-11.2,32.9,-15.1,28.4C-19,23.8,-21.3,18.7,-23.7,13.9C-26.1,9.1,-28.8,4.5,-29.5,-0.5C-30.3,-5.4,-29.3,-10.9,-26.4,-14.9C-23.5,-18.9,-18.7,-21.5,-14,-25.4C-9.3,-29.2,-4.6,-34.3,1.5,-37C7.7,-39.6,15.4,-39.8,22.3,-37.2Z"
+      width="100%"
+      height="100%"
+      transform="translate(50 50)"
+      stroke-width="0"
+      style="transition: 0.3s"
+    ></path>
+  </svg>
 
   <div class="cardContainer">
     <div *ngFor="let card of cards" class="card">
