--- a/src/app/sections/section-servicos/section-servicos.component.scss
+++ b/src/app/sections/section-servicos/section-servicos.component.scss
@@ -8,8 +8,21 @@ main {
   justify-content: center;
   align-items: center;
   gap: 1.8em;
+  border-top: 3px solid #f2f2f2;
+  position: relative;
+
   @media screen and (max-width: 1400px) {
     gap: 0;
+  }
+
+  .svgServices {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.4;
+    content: "";
+    max-width: 1100px;
+    top: 2em;
+    right: 1px;
   }
 
   .cardContainer {
