Melhoria com a responsividade da section Sobre

--- a/src/app/sections/section-sobre/section-sobre.component.html
+++ b/src/app/sections/section-sobre/section-sobre.component.html
@@ -9,14 +9,13 @@
     </div>
     <div class="aboutContainerText">
       <div class="aboutText">
-        <h1>MSantos Construções</h1>
+        <h1>Nexora Construções</h1>
         <p>
-          Somos uma empresa inovadora no setor da construção civil, atuando em
-          projetos para o setor imobiliário e empresas privadas e públicas de
-          destaque. Com uma equipe capacitada, oferecemos soluções inteligentes
-          que respeitam os impactos ambientais e sociais. Utilizamos tecnologias
-          avançadas para otimizar custos, garantir qualidade e cumprir prazos,
-          entregando empreendimentos com eficiência.
+          Somos uma empresa inovadora no setor da construção civil,
+          especializada em projetos para o mercado imobiliário e empresas
+          públicas e privadas. Oferecemos soluções inteligentes, com foco em
+          sustentabilidade, tecnologia avançada e eficiência, garantindo
+          qualidade e cumprimento de prazos.
         </p>
       </div>
       <div class="aboutIconsContainer">
