--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -18,6 +18,12 @@ main {
     letter-spacing: 12px;
     color: #f2f2f2;
     z-index: -1;
+
+    @media screen and (max-width: 640px) {
+      top: 3em;
+      right: -0.1em;
+      font-size: 7em;
+    }
   }
 
   .aboutContainer {
@@ -29,7 +35,14 @@ main {
     padding: 4em 1em;
     flex-direction: row;
     gap: 8em;
-
+    @media screen and (max-width: 1250px) {
+      gap: 3em;
+    }
+    @media screen and (max-width: 780px) {
+      flex-direction: column;
+      gap: 0.4em;
+      padding: 1em;
+    }
     .aboutContainerText {
       display: flex;
       justify-content: center;
@@ -38,20 +51,35 @@ main {
       width: 700px;
       height: 440px;
       padding: 1.2em 0em;
-
+      @media screen and (max-width: 780px) {
+        gap: 1em;
+        width: 100%;
+        padding: 0px;
+      }
       .aboutText {
         display: flex;
         flex-direction: column;
         gap: 2em;
         padding: 0em 1em;
+        width: 100%;
+        @media screen and (max-width: 780px) {
+          gap: 0.8em;
+          padding: 0em 0.8em;
+        }
         h1 {
           font-size: 3em;
+          @media screen and (max-width: 780px) {
+            font-size: 2em;
+          }
         }
 
         p {
           font-size: 1.2em;
           font-weight: 400;
           text-align: justify;
+          @media screen and (max-width: 780px) {
+            font-size: 1.1em;
+          }
         }
       }
 
@@ -63,12 +91,28 @@ main {
         padding: 0em 1em;
         gap: 1em 5em;
 
+        @media screen and (max-width: 1250px) {
+          gap: 1em 2em;
+        }
+        @media screen and (max-width: 1000px) {
+          gap: 1em;
+          height: 100px;
+        }
+        @media screen and (max-width: 620px) {
+          justify-content: center;
+          align-content: center;
+          padding: 0px;
+        }
         .aboutIconText {
           display: flex;
           justify-content: start;
           align-items: center;
           gap: 1em;
-          min-width: 260px;
+          width: 260px;
+          @media screen and (max-width: 620px) {
+            width: 170px;
+            gap: 0.4em;
+          }
 
           .aboutIcon {
             display: flex;
@@ -77,9 +121,19 @@ main {
             border: 2px solid #e6e6e6;
             padding: 8px;
             border-radius: 50%;
+
             span {
               font-size: 1.7em;
               font-weight: 400;
+              @media screen and (max-width: 620px) {
+                font-size: 1.2em;
+              }
+            }
+          }
+          h3 {
+            font-size: 1.17em;
+            @media screen and (max-width: 620px) {
+              font-size: 0.8em;
             }
           }
         }
@@ -88,14 +142,25 @@ main {
 
     .aboutImgContainer {
       position: relative;
+      overflow: hidden;
+
+      @media screen and (max-width: 780px) {
+        width: 370px;
+      }
+
       .imgAbout {
         border-radius: 5px;
+        width: 100%;
+        height: 100%;
       }
 
       .svgAbout {
         position: absolute;
         left: 20px;
         bottom: 20px;
+        @media screen and (max-width: 1250px) {
+          width: 120px;
+        }
       }
     }
   }
