Atualização no Template da Section Valores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Valores -->
+<app-section-valores></app-section-valores>
 <!-- Sobre -->
 <app-section-sobre></app-section-sobre>
 <!-- Serviços -->
