Atualização no Template da Section Valores

--- a/src/app/sections/section-valores/section-valores.component.scss
+++ b/src/app/sections/section-valores/section-valores.component.scss
@@ -49,6 +49,12 @@ main {
         justify-content: center;
         align-items: center;
       }
+      h3 {
+        font-size: 1.4em;
+      }
+      p {
+        color: #f1f1f1;
+      }
     }
   }
 }
