Melhoria na responsividade da Section Valores e correção do title em section Sobre

--- a/src/app/sections/section-valores/section-valores.component.html
+++ b/src/app/sections/section-valores/section-valores.component.html
@@ -5,8 +5,10 @@
   <div class="containerCardValores">
     <div *ngFor="let card of cardValores" class="cardValores">
       <span class="material-symbols-outlined"> {{ card.icon }} </span>
-      <h3>{{ card.title }}</h3>
-      <p>{{ card.description }}</p>
+      <div class="cardText">
+        <h3>{{ card.title }}</h3>
+        <p>{{ card.description }}</p>
+      </div>
     </div>
   </div>
 </main>
