--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -20,9 +20,9 @@ main {
     z-index: -1;
 
     @media screen and (max-width: 640px) {
-      top: 3em;
-      right: -0.1em;
-      font-size: 7em;
+      top: 3.2em;
+      left: 0.1em;
+      font-size: 6em;
     }
   }
 
