--- a/src/app/sections/section-valores/section-valores.component.scss
+++ b/src/app/sections/section-valores/section-valores.component.scss
@@ -24,10 +24,20 @@ main {
   .containerCardValores {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     gap: 2em;
     padding: 1em;
+    border: 1px solid;
+    width: 100%;
+    height: 100%;
+    @media screen and (max-width: 1150px) {
+      gap: 0;
+    }
+    @media screen and (max-width: 700px) {
+      flex-direction: column;
+    }
 
     .cardValores {
       display: flex;
@@ -38,22 +48,50 @@ main {
       padding: 1em;
       text-align: center;
       color: #ffffff;
-      gap: 0.3em;
+      gap: 0.4em;
+
+      @media screen and (max-width: 1150px) {
+        width: 220px;
+      }
+      @media screen and (max-width: 700px) {
+        width: 320px;
+        flex-direction: row;
+        gap: 0.8em;
+      }
 
       span {
         font-size: 3em;
-        border: 2px solid #ffffffbd;
+        border: 2px solid #ffffffd3;
         padding: 10px;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
+        @media screen and (max-width: 700px) {
+          font-size: 1.5em;
+        }
       }
-      h3 {
-        font-size: 1.4em;
-      }
-      p {
-        color: #f1f1f1;
+
+      .cardText {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2em;
+        @media screen and (max-width: 700px) {
+          text-align: start;
+        }
+
+        h3 {
+          font-size: 1.4em;
+          @media screen and (max-width: 700px) {
+            font-size: 1em;
+          }
+        }
+        p {
+          color: #f1f1f1;
+          @media screen and (max-width: 700px) {
+            font-size: 0.8em;
+          }
+        }
       }
     }
   }
