Section Welcome adicionada no template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Welcome -->
+<app-section-welcome></app-section-welcome>
 <!-- Valores -->
 <app-section-valores></app-section-valores>
 <!-- Sobre -->
