--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -20,7 +20,7 @@ main {
     z-index: -1;
 
     @media screen and (max-width: 640px) {
-      top: 3.2em;
+      top: 3.3em;
       left: 0.1em;
       font-size: 6em;
     }
@@ -42,7 +42,7 @@ main {
     @media screen and (max-width: 780px) {
       flex-direction: column;
       gap: 0.4em;
-      padding: 1em;
+      padding: 1.5em 1em 1em 1em;
     }
     .aboutContainerText {
       display: flex;
