--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,5 +2,5 @@
 $font-global: #ececec;
 $colorLine-link: #00863a;
 $color-text: #282828;
-$gradient-header: linear-gradient(0deg, #1e1e1e 0%, #353535 100%);
+$gradient-header: linear-gradient(to right, #1e1e1e 0%, #353535 100%);
 $background-card: #0f7221;
