Inicio da Lógica para scroll das sections feita no header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<app-header></app-header>
+<app-header (scrollTo)="scrollToSection($event)"></app-header>
 <!-- Welcome -->
 <app-section-welcome></app-section-welcome>
 <!-- Valores -->
