Metódo de Scroll animado aplicado na página por completo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!-- Header -->
 <app-header (scrollTo)="scrollToSection($event)"></app-header>
 <!-- Welcome -->
-<app-section-welcome></app-section-welcome>
+<app-section-welcome #welcome></app-section-welcome>
 <!-- Valores -->
-<app-section-valores></app-section-valores>
+<app-section-valores #valores></app-section-valores>
 <!-- Sobre -->
-<app-section-sobre></app-section-sobre>
+<app-section-sobre #sobre></app-section-sobre>
 <!-- Serviços -->
-<app-section-servicos></app-section-servicos>
+<app-section-servicos #servicos></app-section-servicos>
 <!-- Clientes -->
-<app-section-clientes></app-section-clientes>
+<app-section-clientes #clientes></app-section-clientes>
