Aplicando lógica e responsividade para o menu do header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,5 +12,11 @@
     </ul>
   </nav>
 
-  <app-button text="Fale Conosco" link="/"></app-button>
+  <app-button class="btnGlobal" text="Fale Conosco" link="/"></app-button>
+
+  <div class="menuBurger">
+    <span (click)="openMenuBurger()" class="material-symbols-outlined">
+      menu
+    </span>
+  </div>
 </header>
