--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,6 +8,10 @@ header {
   background: $gradient-header;
   width: 100%;
   height: 80px;
+  @media screen and (max-width: 850px) {
+    justify-content: space-between;
+    padding: 0em 3em;
+  }
 
   .logoHeader img {
     width: 100px;
@@ -49,9 +53,8 @@ header {
 
   .menuBurger {
     color: $font-global;
-    width: 100px;
     display: flex;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     span {
       font-size: 2em;
