Melhoria no Sass das sections Welcome, Serviços e Clientes

--- a/src/app/sections/section-clientes/section-clientes.component.scss
+++ b/src/app/sections/section-clientes/section-clientes.component.scss
@@ -9,9 +9,7 @@ main {
   align-items: center;
   gap: 2em;
   position: relative;
-  @media screen and (max-width: 1550px) {
-    justify-content: center;
-  }
+  padding-top: 4.5em;
 
   .logos {
     overflow: hidden;
