--- a/src/app/sections/section-servicos/section-servicos.component.scss
+++ b/src/app/sections/section-servicos/section-servicos.component.scss
@@ -2,11 +2,12 @@
 
 main {
   width: 100%;
-  height: 100vh;
+  height: 47rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 2em;
   gap: 1.8em;
   border-top: 3px solid #f2f2f2;
   position: relative;
@@ -36,16 +37,20 @@ main {
     padding: 60px 20px;
 
     @media screen and (max-width: 1400px) {
-      padding: 60px 30px;
+      padding: 0px 30px;
+      height: 400px;
     }
 
     @media screen and (max-width: 1200px) {
       padding: 40px 20px;
     }
+
     @media screen and (max-width: 1000px) {
       padding: 10px;
       flex-wrap: wrap;
+      height: 600px;
     }
+    
     @media screen and (max-width: 670px) {
       gap: 0.8em;
     }
