--- a/src/app/sections/section-welcome/section-welcome.component.scss
+++ b/src/app/sections/section-welcome/section-welcome.component.scss
@@ -12,6 +12,10 @@ main {
   background-position: center center;
   background-repeat: no-repeat;
 
+  @media screen and (max-width: 1400px) {
+    height: 40rem;
+  }
+
   .containerContentWelcome {
     display: flex;
     flex-direction: column;
