--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,32 +1,122 @@
 @import "@variables";
 
-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  background: $gradient-header;
-  width: 100%;
-  height: 80px;
-  @media screen and (max-width: 850px) {
-    justify-content: space-between;
-    padding: 0em 3em;
-  }
+main {
+  position: relative;
+  header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    background: $gradient-header;
+    width: 100%;
+    height: 80px;
+    @media screen and (max-width: 850px) {
+      justify-content: space-between;
+      padding: 0em 3em;
+    }
+    @media screen and (max-width: 670px) {
+      position: fixed;
+      z-index: 1;
+    }
 
-  .logoHeader img {
-    width: 100px;
-  }
+    .logoHeader img {
+      width: 100px;
+    }
 
-  .navegationHeader {
-    ul {
+    .navegationHeader {
+      ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        gap: 2em;
+        list-style: none;
+
+        li {
+          a {
+            color: $font-global;
+            font-size: 1.1em;
+            font-weight: 500;
+            text-decoration: none;
+            transition: 0.3s ease all;
+            &:hover {
+              color: #00a045;
+            }
+          }
+        }
+      }
+
+      @media screen and (max-width: 850px) {
+        display: none;
+      }
+    }
+
+    .btnGlobal {
+      @media screen and (max-width: 850px) {
+        display: none;
+      }
+    }
+
+    .menuBurger {
+      color: $font-global;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: row;
-      gap: 2em;
-      list-style: none;
+      span {
+        font-size: 2em;
+        cursor: pointer;
+      }
+      @media screen and (min-width: 850px) {
+        display: none;
+      }
+    }
+  }
+
+  .navegationMobile {
+    position: absolute;
+    content: "";
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    z-index: 3;
+    top: 3.1em;
+    right: 1em;
+    height: 264px;
+    width: 220px;
+    background: $gradient-header;
+    border-radius: 8px;
+    gap: 4px;
+    padding-top: 4px;
+
+    @media screen and (min-width: 850px) {
+      display: none;
+    }
+    @media screen and (max-width: 670px) {
+      position: fixed;
+    }
+
+    .svgNavMobile {
+      width: 100%;
+      display: flex;
+      height: 24px;
+      justify-content: end;
+      align-items: center;
+      padding-right: 2em;
+      img {
+        height: 32px;
+      }
+    }
+    ul {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 18px;
 
       li {
+        list-style-type: none;
         a {
           color: $font-global;
           font-size: 1.1em;
@@ -38,30 +128,6 @@ header {
           }
         }
       }
-    }
-
-    @media screen and (max-width: 850px) {
-      display: none;
-    }
-  }
-
-  .btnGlobal {
-    @media screen and (max-width: 850px) {
-      display: none;
-    }
-  }
-
-  .menuBurger {
-    color: $font-global;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    span {
-      font-size: 2em;
-      cursor: pointer;
-    }
-    @media screen and (min-width: 850px) {
-      display: none;
     }
   }
 }
