Section Contatos adicionada no app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,5 @@
 <app-section-servicos #servicos></app-section-servicos>
 <!-- Clientes -->
 <app-section-clientes #clientes></app-section-clientes>
+<!-- Contatos -->
+<app-section-contatos #contatos></app-section-contatos>
