--- a/src/app/sections/section-contatos/section-contatos.component.scss
+++ b/src/app/sections/section-contatos/section-contatos.component.scss
@@ -28,12 +28,31 @@ main {
     height: 30em;
     gap: 10em;
 
+    @media screen and (max-width: 1400px) {
+      gap: 0;
+    }
+
+    @media screen and (max-width: 870px) {
+      flex-direction: column;
+    }
+
     .svgContainerContatos {
       width: 500px;
-      padding: 1em;
+      padding: 3em;
       display: flex;
       flex-direction: column;
       gap: 2em;
+
+      @media screen and (max-width: 870px) {
+        justify-content: center;
+        align-items: center;
+        padding: 3em 3em 3em 2em;
+      }
+
+      @media screen and (max-width: 600px) {
+        width: 100%;
+        padding-bottom: 2em;
+      }
 
       .cardSvgContatos {
         width: 300px;
@@ -46,6 +65,9 @@ main {
 
         img {
           width: 5em;
+          @media screen and (max-width: 600px) {
+            width: 3.8em;
+          }
         }
         .textCardContatos {
           height: 100%;
@@ -58,12 +80,18 @@ main {
           gap: 0.1em;
           h1 {
             font-size: 2.4em;
+            @media screen and (max-width: 600px) {
+              font-size: 2em;
+            }
           }
           p {
             padding-left: 2px;
             font-size: 1.1em;
             color: $color-text;
             font-weight: 600;
+            @media screen and (max-width: 600px) {
+              font-size: 1em;
+            }
           }
         }
       }
@@ -75,7 +103,24 @@ main {
       justify-content: center;
       align-items: start;
       flex-direction: column;
+      padding: 1em;
       gap: 1.5em;
+
+      @media screen and (max-width: 870px) {
+        align-items: center;
+      }
+
+      @media screen and (max-width: 600px) {
+        width: 100%;
+        gap: 1em;
+      }
+
+      h1 {
+        font-size: 2em;
+        @media screen and (max-width: 600px) {
+          font-size: 1.8em;
+        }
+      }
 
       .emailSendContatos {
         width: 100%;
@@ -83,6 +128,14 @@ main {
         justify-content: start;
         align-items: center;
         gap: 1em;
+
+        @media screen and (max-width: 870px) {
+          justify-content: center;
+        }
+        @media screen and (max-width: 600px) {
+          gap: 0.5em;
+          width: 300px;
+        }
 
         input {
           padding: 0.5em;
@@ -97,6 +150,11 @@ main {
             border-color: #5f5f5f;
             box-shadow: 0px 0px 2px (#4e4e4e83);
           }
+
+          @media screen and (max-width: 600px) {
+            width: 280px;
+            font-size: 0.8em;
+          }
         }
         .btnContatos {
           font-size: 1em;
@@ -110,6 +168,11 @@ main {
           transition: 0.3s ease all;
           &:hover {
             background-color: #019943;
+          }
+
+          @media screen and (max-width: 600px) {
+            padding: 4px;
+            font-size: 0.8em;
           }
         }
       }
