--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,5 @@
 <app-section-clientes #clientes></app-section-clientes>
 <!-- Contatos -->
 <app-section-contatos #contatos></app-section-contatos>
+<!-- Footer -->
+<app-footer></app-footer>
