--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -34,7 +34,7 @@ footer {
     }
 
     p {
-      color: #e2e2e2;
+      color: #e2e2e2b9;
       font-size: 14px;
       @media screen and (max-width: 420px) {
         font-size: 12px;
