Adicionado o GSAP ao projeto e aplicado na section Welcome

--- a/src/app/sections/section-welcome/section-welcome.component.html
+++ b/src/app/sections/section-welcome/section-welcome.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="containerContentWelcome">
+  <div #textWelcome class="containerContentWelcome">
     <div class="textWelcome">
       <h1>Oferecendo soluções inteligentes para a construção civil</h1>
       <p>
