--- a/src/app/sections/section-valores/section-valores.component.html
+++ b/src/app/sections/section-valores/section-valores.component.html
@@ -1,9 +1,9 @@
-<main>
+<main #containerCards>
   <div class="svgValores">
     <img src="assets/imgValores.jpg" alt="valoresSvg" />
   </div>
   <div class="containerCardValores">
-    <div *ngFor="let card of cardValores" class="cardValores">
+    <div #cards *ngFor="let card of cardValores" class="cardValores">
       <span class="material-symbols-outlined"> {{ card.icon }} </span>
       <div class="cardText">
         <h3>{{ card.title }}</h3>
