GSAP aplicado na section sobre, mas falta ainda completar toda a page

--- a/src/app/sections/section-sobre/section-sobre.component.html
+++ b/src/app/sections/section-sobre/section-sobre.component.html
@@ -1,13 +1,18 @@
 <main>
   <div class="aboutTitle">
-    <h1>SOBRE</h1>
+    <h1 #title>SOBRE</h1>
   </div>
   <div class="aboutContainer">
     <div class="aboutImgContainer">
-      <img class="imgAbout" src="assets/imgSobre.jpg" alt="sobre" />
-      <img class="svgAbout" src="assets/svgSobre.svg" alt="svgSobre" />
+      <img #aboutImg class="imgAbout" src="assets/imgSobre.jpg" alt="sobre" />
+      <img
+        #aboutSvg
+        class="svgAbout"
+        src="assets/svgSobre.svg"
+        alt="svgSobre"
+      />
     </div>
-    <div class="aboutContainerText">
+    <div #containerTextAbout class="aboutContainerText">
       <div class="aboutText">
         <h1>Nexora Construções</h1>
         <p>
