--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -13,11 +13,12 @@ main {
     position: absolute;
     content: "";
     top: 0.6em;
-    right: 2em;
+    right: 0.5em;
     font-size: 10em;
     letter-spacing: 12px;
     color: #f2f2f2;
     z-index: -1;
+    opacity: 0;
 
     @media screen and (max-width: 640px) {
       top: 3.3em;
@@ -157,7 +158,8 @@ main {
 
       .svgAbout {
         position: absolute;
-        left: 20px;
+        left: 0;
+        opacity: 0;
         bottom: 20px;
         @media screen and (max-width: 1250px) {
           width: 120px;
