--- a/src/app/sections/section-contatos/section-contatos.component.scss
+++ b/src/app/sections/section-contatos/section-contatos.component.scss
@@ -8,6 +8,7 @@ main {
   justify-content: center;
   align-items: center;
   position: relative;
+  border-top: 2px solid #d9d9d9;
 
   .svgContatos {
     position: absolute;
@@ -64,7 +65,7 @@ main {
         height: 80px;
 
         img {
-          width: 5em;
+          width: 4.8em;
           @media screen and (max-width: 600px) {
             width: 3.8em;
           }
