--- a/src/app/sections/section-contatos/section-contatos.component.html
+++ b/src/app/sections/section-contatos/section-contatos.component.html
@@ -1,7 +1,7 @@
 <main>
   <app-title-sections title="Fale Conosco"></app-title-sections>
 
-  <div class="containerContatos">
+  <div #containerContatos class="containerContatos">
     <div class="svgContainerContatos">
       <div *ngFor="let cardContato of cardContatos" class="cardSvgContatos">
         <img [src]="cardContato.img" [alt]="cardContato.imgAlt" />
