Remoção do component title da section, sendo aplicado o h1 na propria raiz da section, finalizando o projeto

--- a/src/app/sections/section-contatos/section-contatos.component.html
+++ b/src/app/sections/section-contatos/section-contatos.component.html
@@ -1,6 +1,7 @@
 <main>
-  <app-title-sections title="Fale Conosco"></app-title-sections>
-
+  <div class="titleContatos">
+    <h1 #titleContatos>Fale Conosco</h1>
+  </div>
   <div #containerContatos class="containerContatos">
     <div class="svgContainerContatos">
       <div *ngFor="let cardContato of cardContatos" class="cardSvgContatos">
