--- a/src/app/sections/section-contatos/section-contatos.component.scss
+++ b/src/app/sections/section-contatos/section-contatos.component.scss
@@ -10,6 +10,29 @@ main {
   position: relative;
   border-top: 2px solid #d9d9d9;
 
+  .titleContatos {
+    h1 {
+      color: $color-text;
+      font-size: 4rem;
+      width: 100%;
+      padding: 1em 0em 0em 0em;
+      @media screen and (max-width: 1400px) {
+        font-size: 3.5em;
+        padding: 1em;
+      }
+
+      @media screen and (max-width: 1000px) {
+        font-size: 3em;
+        padding: 1em;
+      }
+
+      @media screen and (max-width: 600px) {
+        font-size: 2.5em;
+        text-align: center;
+        padding: 1em;
+      }
+    }
+  }
   .svgContatos {
     position: absolute;
     z-index: -1;
