--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -21,6 +21,11 @@ main {
 
     .logoHeader img {
       width: 100px;
+
+      @media screen and (max-width: 670px) {
+        width: 85px;
+      }
+      
     }
 
     .navegationHeader {
