--- a/src/app/sections/section-sobre/section-sobre.component.scss
+++ b/src/app/sections/section-sobre/section-sobre.component.scss
@@ -13,12 +13,12 @@ main {
     position: absolute;
     content: "";
     top: 0.6em;
-    right: 0.5em;
+    right: 2em;
     font-size: 10em;
     letter-spacing: 12px;
     color: #f2f2f2;
     z-index: -1;
-    opacity: 0;
+    opacity: 1;
 
     @media screen and (max-width: 640px) {
       top: 3.3em;
@@ -77,8 +77,9 @@ main {
 
         p {
           font-size: 1.2em;
-          font-weight: 400;
+          font-weight: 500;
           text-align: justify;
+          color: #282828;
           @media screen and (max-width: 780px) {
             font-size: 1.1em;
           }
