--- a/src/app/sections/section-welcome/section-welcome.component.scss
+++ b/src/app/sections/section-welcome/section-welcome.component.scss
@@ -65,6 +65,8 @@ main {
 
       p {
         font-size: 1.2em;
+        font-weight: 500;
+        color: #ececec;
 
         @media screen and (max-width: 500px) {
           font-size: 1.1em;
