Mudança no menuBar para button e ajuste no tamanho do paragraph dos cards em serviços

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,9 +16,9 @@
     <app-button class="btnGlobal" text="Fale Conosco" link="#"></app-button>
 
     <div class="menuBurger">
-      <span (click)="onClickMenuBurger()" class="material-symbols-outlined">
+      <button (click)="onClickMenuBurger()" class="material-symbols-outlined">
         menu
-      </span>
+      </button>
     </div>
   </header>
 
