--- a/src/app/sections/section-servicos/section-servicos.component.scss
+++ b/src/app/sections/section-servicos/section-servicos.component.scss
@@ -152,7 +152,8 @@ main {
           font-size: 0.9em;
         }
         @media screen and (max-width: 1000px) {
-          font-size: 0.7em;
+          font-size: 0.75em;
+          font-weight: 500;
         }
       }
     }
